# project-fantasy

./: .cproject  .directory  .fantasy-main.c.kate-swp  .gitignore  .project  12player.fc  CMakeCache.txt  CMakeLists.txt  Makefile  README  SalvataggioDaProvarePerBugDijkstra.fc  TODO  cmake_install.cmake  fantasy-core.h  fantasy-gtk.c  fantasy-gtk.h  fantasy-lib.c  fantasy-loadsave.c  fantasy-main.c  fantasy.config  figo.fc  gbin  how  log.txt  prova.fc
Parser/: Makefile  prova.fuzzy
Parser/include/: fantasy-fuzzy.h
Parser/src/: fantasy-fuzzy.c  parser.y  scanner.l
fantasy-editor/: editor  fantasy-editor.c
img/: mov.xpm
img/a/: 0.xpm  1.xpm  10.xpm  11.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  7.xpm  8.xpm  9.xpm
img/n/: n2.xpm
img/p/: p3.xpm
img/t/: t01.xpm  t10.xpm  t11.xpm  t110.xpm  t111.xpm  t21.xpm  t22.xpm  t30.xpm  t31.xpm  t32.xpm  (+4 more)
immagini/: Freccia.xpm
include/: .directory  fantasy-IA-gtk.h  fantasy-IA.h  fantasy-core-mov.h  fantasy-core.h  fantasy-gtk-fight.h  fantasy-gtk-img.h  fantasy-gtk-key.h  fantasy-gtk-map.h  fantasy-gtk-menu.h  fantasy-gtk-pan.h  fantasy-gtk-partita.h  fantasy-gtk-tab.h  fantasy-gtk.h
project-fantasy-1.0/: Makefile  README  TODO  fantasy-core.h  fantasy-gtk.h  fantasy-lib.c  fantasy-loadsave.c  fantasy-main.c  provalib.c
src/: .fantasy-gtk.c.kate-swp  FantasIA.c  fantasIA-gtk.c  fantasIA.c  fantasy-core-mov.c  fantasy-core.c  fantasy-editor.c  fantasy-gtk-fight.c  fantasy-gtk-img.c  fantasy-gtk-key.c  fantasy-gtk-map.c  fantasy-gtk-menu.c  fantasy-gtk-pan.c  fantasy-gtk-partita.c  fantasy-gtk-tab.c  fantasy-gtk.c  fantasy-gtk.c.orig  fantasy-lib.c  fantasy-loadsave.c  fantasy-main.c
testing/: minimain.c
(+196 files in other folders)
